# gwasm-dispatcher-cpp

./: .clang-format  README.md  meson.build
.github/workflows/: cpp.yml
docs/: more_detailed_readme.md
example_app/: README.md  main.cpp  meson.build
include/: gwasm.hpp
include/gwasm/: args.hpp  blob.hpp  dispatcher.hpp  error.hpp  split.hpp
include/gwasm/detail/: args.hpp  execute.hpp  json.hpp  merge.hpp  split.hpp  step_args.hpp  task_def.hpp  utils.hpp
src/: blob.cpp  split.cpp
src/detail/: args.cpp  json.cpp  step_args.cpp  task_def.cpp
test/: args.cpp  args.hpp  dispatcher.cpp  execute.cpp  main.cpp  merge.cpp  my_functions.cpp  my_functions.hpp  split.cpp  temp_dir_fixture.cpp  temp_dir_fixture.hpp  utils.cpp  utils.hpp
test/detail/: step_args.cpp
